# AVA-ros

./: .gitignore  LICENSE  README.md  packages.txt
arduino/PacketSerialSimplePWM/: PacketSerialSimplePWM.ino
arduino/arduino-timer-test/: arduino-timer-test.ino
arduino/arm_test/: arm_test.ino
arduino/drivetrain_control/: drivetrain_control.ino
arduino/motor_control/: motor_control.ino
arduino/sketch_jun04a/: sketch_jun04a.ino
arduino/stepper_ros_arduino/: stepper_ros_arduino.ino
arm/: �5@@XZ@8  CMakeLists.txt  package.xml
arm/config/: servo_config.yaml
arm/include/: ArmController.hpp  DynamixelHelper.hpp  DynamixelMotor.hpp
arm/launch/: .start_arm_serial.sh.swp  arm.launch  start_arm_serial.sh
arm/src/: .estop.cpp.swp  action_client.cpp  arm_commands.cpp  arm_controller.cpp  controller_pipeline.cpp  dynamixel_controller.cpp  dynamixel_hand_control.cpp  estop.cpp  hand_controller.cpp  hand_controller2.cpp  hardware_interface.cpp  hi5_receive.cpp  joystick.cpp  pipeline.cpp  planning.cpp  servo_server.cpp
arm/urdf/: Arm.gv  Arm.urdf  Arm_gazebo.urdf
drivetrain/: CMakeLists.txt  package.xml
drivetrain/launch/: drivetrain.launch  start_drivetrain_serial.sh
drivetrain/msg/: Motor.msg
drivetrain/script/: drivetrain_control.launch  rosserial.sh
drivetrain/src/: speed_control.cpp  wheel_control.cpp
hardware/: CMakeLists.txt  package.xml
hardware_controller/: CMakeLists.txt  package.xml
hardware_controller/src/: hardware_interface.cpp
ik_arm/: .setup_assistant  CMakeLists.txt  package.xml
ik_arm/config/: Arm.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
ik_arm/launch/: Arm_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  (+16 more)
launch/: launch_all.sh  master_launch.launch
main_pkg/: CMakeLists.txt  package.xml
right_arm/: CMakeLists.txt  package.xml
right_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
right_arm_config2/: .setup_assistant  CMakeLists.txt  package.xml
right_arm_hardware_config/: .setup_assistant  package.xml
right_arm_ik_config/: .setup_assistant  CMakeLists.txt  package.xml
right_arm_urdf/: package.xml
vision/: CMakeLists.txt  package.xml
vision/launch/: .ZED_Streaming_serial.sh.swp  .vision.launch.swp  ZED_Streaming_serial.sh  begin_ZED_Streaming_Sender.sh  vision.launch
vision/src/: pantilt.cpp
(+296 files in other folders)
